test/parser/should_fail/comments2.souc.bad
import Commens

{; comment begins here, but doesn't end.
main() = do
	x <- 42 ; a comment
	print x
